--- a/vyapara1app/templates/company/creditnotedetails.html
+++ b/vyapara1app/templates/company/creditnotedetails.html
@@ -133,6 +133,9 @@
         .tot{
             margin-right:30px;
         }
+        .disc{
+            margin-right:30px;
+        }
     }
 
     .vl {
@@ -218,7 +221,8 @@
                                     <a class="btn ml-4" onclick="toggleDropdown()"> <img width="30px" src="{% static 'images/shareimg.png' %}" alt="no img"><br>Share</a>
                                     <div class="dropdown-content" id="myDropdown">
                                         <ul style="margin-bottom: -1px;">{% post_to_whatsapp object_or_url "WhatsApp" %}</ul>
-                                        <ul style="margin-bottom: -1px;">{% send_email object.title "{{object.title}}" object_or_url "Email" %}</ul>
+                                        {% comment %} <ul style="margin-bottom: -1px;">{% send_email object.title "{{object.title}}" object_or_url "Email" %}</ul> {% endcomment %}
+                                        <ul style="margin-bottom: -1px;"> <ul><a href="#shareBillEmail" data-bs-toggle="modal">Email</a></ul></ul>
                                     </div>
                                     <a class="ml-5" href="{% url 'creditnote_list' %}" style="text-align: right; font-size: large; color: black;">
                                         <i class="fa fa-times mt-2" aria-hidden="true"></i>
@@ -741,11 +745,11 @@
                                                 </div>
                                                 <div><br>
                                                     {% if dis != 0 %}
-                                                    <div class="row ml-1">
-                                                        <div class="col-md-5 text-left" style=" color: black;">
+                                                    <div class="row ml-1 disc">
+                                                        <div class="col-md-5 text-left " style=" color: black;">
                                                             Discount
                                                         </div>
-                                                        <div class="col-md-6 text-right ml-2" style="color: black;">
+                                                        <div class="col-md-5 text-right ml-2" style="color: black;">
                                                             {{ dis }}
                                                         </div>
                                                     </div>
@@ -792,7 +796,7 @@
                                                         <div class="col-md-5 text-left" style=" color: black;">
                                                             Adjust
                                                         </div>
-                                                        <div class="col-md-6 text-right ml-2" style="color: black;">
+                                                        <div class="col-md-5 text-right ml-2" style="color: black;">
                                                             {{ credit.adjust }}
                                                         </div>
                                                     </div>
@@ -828,6 +832,33 @@
                 </div>
             </div>
         </div> 
+    </div>
+</div>
+
+<div class="modal fade" id="shareBillEmail" tabindex="-1" aria-labelledby="shareBillEmailLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content" style=" background-color:rgb(85, 188, 248);">
+        <div class="modal-header" style="border-bottom: 1px solid #ffffff;">
+          <h5 class="modal-title text-dark" id="shareBillEmailLabel">Share Invoice Via Email</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form action="{% url 'sharecreditnoteToEmail' credit.id %}" method="post" class="needs-validation" id="share_to_email_form">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="emailIds">Email IDs</label>
+                <textarea class="form-control" name="email_ids" id="emailIds" rows="3" placeholder="Multiple emails can be added by separating with a comma(,)." required></textarea>
+            </div>
+            <div class="form-group mt-2">
+                <label for="item_unitname">Message(optional)</label>
+                <textarea name="email_message" id="email_message" class="form-control" cols="" rows="4" placeholder="This message will be sent along with Invoice details."></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer d-flex justify-content-center" style="border-top: 1px solid #ffffff;">
+          <button type="submit" id="share_with_email" class="submitShareEmailBtn w-50 text-uppercase btn btn-danger">SEND MAIL</button>
+        </div>
+      </div>
     </div>
 </div>
 
@@ -923,6 +954,44 @@
             behavior: 'smooth'
         });
     }
+</script>
+
+<script>
+
+    $(document).ready(function(){
+        $('#share_with_email').on('click',function(){
+            var emailsInput = document.getElementById('emailIds');
+            var emailsString = emailsInput.value.trim();
+
+            var emails = emailsString.split(',').map(function(email) {
+                return email.trim();
+            });
+
+            var emailRegex = /^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/;
+
+            var invalidEmails = []
+            if(emailsString == ""){
+                alert('Enter valid email addresses..')
+            }
+            else{
+                for (var i = 0; i < emails.length; i++) {
+                    var currentEmail = emails[i];
+
+                    if (currentEmail!="" && !emailRegex.test(currentEmail)) {
+                        console.log(currentEmail + ' is invalid!');
+                        invalidEmails.push(currentEmail)
+                    }
+                }
+                
+                if(invalidEmails.length > 0){
+                    alert('Invalid emails..Please check!\n'+invalidEmails)
+                    // alert(invalidEmails)
+                }else{
+                    $('#share_to_email_form').submit();
+                }
+            }
+        })
+    });
 </script>
 
 <script type="text/javascript">
