--- a/vyapara1app/templates/company/creditlist.html
+++ b/vyapara1app/templates/company/creditlist.html
@@ -226,7 +226,7 @@
                             &nbsp;<a class="btn btn-info" onclick="filterTable(5)">Apply</a>
                         </div>
                     </th>
-                    {% comment %} <th class="bg-secondary text-white extra">
+                    <th class="bg-secondary text-white extra">
                         ACTION
                         &nbsp; <a onclick="toggleDropdown(6)"><i class="fa fa-filter" aria-hidden="true"></i></a>
                         <div class="dropdown-content" id="dropdownContent6">
@@ -235,7 +235,7 @@
                             <a class="btn btn-info" onclick="cleardropdown(6)">Clear</a> 
                             &nbsp;<a class="btn btn-info" onclick="filterTable(6)">Apply</a>
                         </div>
-                    </th> {% endcomment %}
+                    </th> 
                     <th class="bg-secondary text-white extra">
                         BY
                         &nbsp; <a onclick="toggleDropdown(7)"><i class="fa fa-filter" aria-hidden="true"></i></a>
@@ -260,7 +260,17 @@
                     
                     <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.grandtotal}}</td>
                     <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.balance}}</td>
-                    {% comment %} <td class="clickable-row extra" style="color: black;" data-href="detail_creditnote/{{ c.id }}"></td> {% endcomment %}
+                    
+                     <!-- New column for displaying the latest transaction action for each credit note -->
+                    <td class="clickable-row extra" style="color: black;">
+                        {% for action in latest_actions %}
+                            {% if action.creditnote == c %}
+                                {{ action.action }}
+                            {% endif %}
+                        {% endfor %}
+                    </td>
+        
+                   
                     <td class="clickable-row extra" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.company.company_name}}</td>
                     <td class="pt-3 m-0 extra">
                         <div class="btn-group">
@@ -268,10 +278,10 @@
                                 <span class="fa fa-ellipsis-v text-dark fs-1 ps-"></span>
                             </button>
                             <ul class="dropdown-menu">
-                              <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-eye pe-2 tg"></span> View </a></li>
+                              <li><a class="dropdown-item fw-bold tb hide_table_text_v" href="{% url 'detail_creditnote' c.id %}"><span class="fa fa-eye pe-2 tg"></span> View </a></li>
                               <li><a class="dropdown-item fw-bold tb hide_table_text_v" href="{% url 'edit_creditnote' c.id %}"><span class="fa fa-edit pe-2 tj"></span> Edit</a></li>
-                              <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-history pe-2 th"></span> History</a></li>
-                              <li><a class="dropdown-item fw-bold tb hide_table_text_d" onclick="deletepbill('{{c.id}}')"><span class="fa fa-trash-alt tr" style="padding-inline-start: 0.1rem;padding-inline-end:0.7rem ;"></span> Delete</a></li>
+                              <li><a class="dropdown-item fw-bold tb hide_table_text_v" href="{% url 'history_creditnote' c.id %}"><span class="fa fa-history pe-2 th"></span> History</a></li>
+                              <li><a class="dropdown-item fw-bold tb hide_table_text_d" href="#" onclick="return deletepbill('{{c.id}}')"><span class="fa fa-trash-alt tr" style="padding-inline-start: 0.1rem; padding-inline-end: 0.7rem;"></span>Delete</a></li>
                             </ul>
                         </div>
                     </td>
@@ -381,11 +391,11 @@
                 <form id="excelForm" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="file" style="color: black;">Choose Excel File for Purchase Bill- </label> <br>
-                        <input type="file" class="form-control-file" id="billfile" name="billfile" accept=".xls, .xlsx"><br><br>
+                        <label for="file" style="color: black;">Choose Excel File for CreditNote- </label> <br>
+                        <input type="file" class="form-control-file" id="creditfile" name="creditfile" accept=".xls, .xlsx"><br><br>
                         
 
-                        <label for="file" style="color: black;">Choose Excel File for Purchase Bill Products- </label> <br>
+                        <label for="file" style="color: black;">Choose Excel File for CreditNote Products- </label> <br>
                         <input type="file" class="form-control-file" id="prdfile" name="prdfile" accept=".xls, .xlsx"><br>
                     </div>
                 </form>
@@ -397,6 +407,9 @@
         </div>
     </div>
 </div>
+
+
+
 
 {% comment %} <script>
     $(document).ready(function() {
@@ -450,36 +463,28 @@
     });
 </script> {% endcomment %}
 <script>
-    function deletepbill(id)
-    {
+    function deletepbill(id) {
         swal({
-            title: "Confirmation !",
-            text: "Do you want to Delete this Credit Note?",
+            title: "Confirmation",
+            text: "Do you want to delete this Credit Note?",
             icon: "warning",
-            buttons: true,
+            buttons: ["Cancel", "Delete"],
             dangerMode: true,
         })
         .then((willDelete) => {
             if (willDelete) {
-                swal({
-                    title: "Deleted !",
-                    text: "Credit Note Deleted Successfully!",
-                    icon: "success",
-                    buttons: false,
-                })
-                .then((willDelete) => {
-                    if (willDelete) {
-                        window.location.href = "{% url 'delete_CreditNote' 0 %}".replace('0', id);
-                    } else {
-                        window.location.href = "{% url 'delete_CreditNote' 0 %}".replace('0', id);
-                    }
-                });
+                // The user clicked "Delete," proceed with deletion or redirection
+                window.location.href = "{% url 'delete_CreditNote' 0 %}".replace('0', id);
             } else {
-                swal("Action Cancelled!");
+                // The user clicked "Cancel," do nothing
             }
         });
+
+        // Prevent the default link behavior
+        return false;
     }
 </script>
+
 
 <script>
     function uploadFile() {
@@ -492,7 +497,7 @@
         .then(data => {
             swal({
                 title: "Imported !",
-                text: "Purchase Bill Import Successfull!",
+                text: "CreditNote Import Successfull!",
                 icon: "success",
                 buttons: false,
             })
@@ -505,7 +510,7 @@
         .catch(error => {
             swal({
                 title: "Error !",
-                text: "Purchase Bill Import Unuccessfull!",
+                text: "CreditNote Import Unuccessfull!",
                 icon: "warning",
                 buttons: false,
             })
@@ -514,8 +519,8 @@
 </script>
 
 
-
-{% comment %} <script>
+{% comment %} 
+<script>
     var table = document.getElementById('billtable');
     var rows = table.getElementsByTagName('tr');
     for (var i = 1; i < rows.length; i++) {
@@ -541,8 +546,7 @@
             }
         });
     }
-</script> {% endcomment %}
-
+</script>  {% endcomment %}
 <script>
     function cleardropdown(index){
         if(index == 0){
@@ -570,23 +574,31 @@
         } else {
             input = document.getElementById('filterInput' + index).value.toUpperCase();
         }
+    
+        console.log('Input:', input);
+    
         var table = document.getElementById('billtable');
         var rows = table.getElementsByTagName('tr');
         var emptyMessage = document.getElementById('emptyMessage');
         var isEmpty = true;
+    
         for (var i = 1; i < rows.length; i++) {
             var cells = rows[i].getElementsByTagName('td');
             var cell = cells[index];
+    
             if (cell) {
                 var textValue = cell.textContent || cell.innerText;
+    
                 if (index === 0) {
-                    if (input==''){
+                    console.log('Date Value:', textValue);
+                    if (input == '') {
                         rows[i].style.display = 'table-row';
-                            isEmpty = false;
-                    }else{
-                        dateval  = textValue.replace(/(\d{2})-(\d{2})-(\d{2})/, "$2-$1-$3");
-                        inputval  = input.replace(/(\d{2})-(\d{2})-(\d{2})/, "$2-$1-$3");
+                        isEmpty = false;
+                    } else {
+                        dateval = textValue.replace(/(\d{2})-(\d{2})-(\d{2})/, "$2-$1-$3");
+                        inputval = input.replace(/(\d{2})-(\d{2})-(\d{2})/, "$2-$1-$3");
                         const formattedDate = formatDateString(input);
+                        console.log('Formatted Date:', formattedDate);
                         if (dateval === formattedDate) {
                             rows[i].style.display = 'table-row';
                             isEmpty = false;
@@ -595,6 +607,7 @@
                         }
                     }
                 } else {
+                    console.log('Text Value:', textValue);
                     if (textValue.toUpperCase().includes(input)) {
                         rows[i].style.display = 'table-row';
                         isEmpty = false;
@@ -604,10 +617,12 @@
                 }
             }
         }
+    
+        console.log('Is Empty:', isEmpty);
         emptyMessage.style.display = isEmpty ? 'block' : 'none';
-        calculatetotal()
+        calculatetotal();
     }
-
+    
     function formatDateString(inputDate) {
         const parsedDate = new Date(inputDate);
         const day = parsedDate.getDate();
